--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Balakrishna | Profile</title>
 
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f4f6f8;
+            color: #333;
+        }
+
+        header {
+            background: #0a3d62;
+            color: white;
+            padding: 30px 15px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 10px 0 5px;
+        }
+
+        header p {
+            margin: 0;
+            font-size: 16px;
+        }
+
+        section {
+            background: white;
+            margin: 15px;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #0a3d62;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 5px;
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+        .skills span {
+            display: inline-block;
+            background: #0a3d62;
+            color: white;
+            padding: 6px 12px;
+            border-radius: 20px;
+            margin: 5px;
+            font-size: 14px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            font-size: 14px;
+            color: #666;
+        }
+    </style>
+</head>
+
+<body>
+
+<header>
+    <h1>Balakrishna</h1>
+    <p>B.Tech (EEE) Student | Aspiring Ethical Hacker</p>
+</header>
+
+<section>
+    <h2>About Me</h2>
+    <p>
+        I am a B.Tech 2nd year Electrical and Electronics Engineering student.
+        I am passionate about technology, cybersecurity, and ethical hacking.
+        I am currently learning web development and security fundamentals.
+    </p>
+</section>
+
+<section>
+    <h2>Education</h2>
+    <ul>
+        <li><strong>B.Tech (EEE)</strong> – Methodist College of Engineering Science and Technology</li>
+        <li><strong>Diploma</strong> – Sri Sangameshwara Polytechnic College</li>
+        <li><strong>SSC</strong> – Sri Sai Krishna Talent School</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Skills</h2>
+    <div class="skills">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript (Basic)</span>
+        <span>Cybersecurity Basics</span>
+        <span>Networking</span>
+        <span>Linux Basics</span>
+        <span>Problem Solving</span>
+    </div>
+</section>
+
+<section>
+    <h2>Career Goal</h2>
+    <p>
+        My goal is to become an Ethical Hacker and work in cybersecurity,
+        protecting systems and networks from cyber threats.
+    </p>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p>Email: balappolabalakrishna@gmail.com</p>
+    <p>Phone: 7207805011</p>
+</section>
+
+<footer>
+    © 2026 Balakrishna | Designed by Me
+</footer>
+
+</body>
+  </html>
