Update footer text to include publication info
Footer text change

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
 
         <footer>
-            © 2026 Balappola Balakrishna
+            © 2026 Balappola Balakrishna || published by self
         </footer>
 
     </div>
