Change subscribe heading color to red
Colour

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <!-- Subscribe Section -->
         <div class="subscribe">
-            <h2>Subscribe</h2>
+            <h2 style="color:red;">Subscribe</h2>
             <input type="email" id="email" placeholder="Enter your email" required><br>
             <button onclick="subscribe()">Subscribe</button>
         </div>
