Change footer text color to yellow
Yellow colour in footer

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <button onclick="subscribe()">Subscribe</button>
         </div>
 
-        <footer>
+        <footer style="color: yellow;">
             © 2026 Balappola Balakrishna || published by self
         </footer>
 
