Change footer text color from yellow to orange
Footer

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <button onclick="subscribe()">Subscribe</button>
         </div>
 
-        <footer style="color: yellow;">
+        <footer style="color: orange;">
             © 2026 Balappola Balakrishna || published by self
         </footer>
 
