Update styles for subscribe section and footer
Color

--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 
         <!-- Subscribe Section -->
         <div class="subscribe">
-            <h2 style="color:red;">Subscribe</h2>
+            <h2>Subscribe</h2>
             <input type="email" id="email" placeholder="Enter your email" required><br>
-            <button onclick="subscribe()">Subscribe</button>
+            <button onclick="subscribe()" style="color:red;">Subscribe</button>
         </div>
 
-        <footer style="color: orange;">
+        <footer style="color: black;">
             © 2026 Balappola Balakrishna || published by self
         </footer>
 
