--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
     <div class="container">
 
         <h1>Balappola Balakrishna</h1>
+        <img src="profile.webp" alt="Profile Photo"
+     style="width:180px;border-radius:50%;display:block;margin:15px auto;">
 
         <div class="info">
             <p><strong>Email:</strong> balappolabalakrishna@gmail.com</p>
